# nb_rs

./: .gitignore  Cargo.toml  README.md  logs.txt  output.txt
src/: cache.rs  config.rs  config.toml  config_template.toml  consolidate.rs  main.rs  parser.rs  utils.rs
src/fetch/: azure.rs  fortigate.rs  mod.rs  nagiosxi.rs
src/netbox/: api.rs  dcim.rs  mod.rs  models.rs  tenancy.rs
