[package]
name = "netbox_ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1.88"
url = "2.5.4"

[dev-dependencies]
tokio-test = "0.4"
